# GBPBot

./: .codiga.yml  .env  .env.backup_20250306_021553  .env.backup_20250308_035354  .env.example  .env.example.txt  .env.mainnet  .env.optimized  .flake8  .gitignore  .pylintrc  AUTO_OPTIMIZER_README.md  AnalyseOpportunites.py  CHANGELOG.md  CLAUDE_INTEGRATION.md  Configuration du pc utilisateur.txt  FONCTIONNEMENT DU GBP BOT§.txt  GBPBOT_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_METHODS.md.old  NOUVEAUTES_OPTIMISATION.md  NOUVELLES_FONCTIONNALITES.md  OBJECTIF FINAL.txt  OPTIMIZATIONS.md  OPTIMIZATIONS_SUMMARY.md  PERFORMANCE_README.md  Pipfile  README.md  README_LAUNCHER.md  README_OPTIMISATIONS.md  README_TESTS.md  README_TYPE_ERRORS.md  ROADMAP_PROGRESS.md  SECURITY_AUDIT.md  TELEGRAM_INTERFACE.md  Untitled-1.txt  advanced_logging.py  analyse_locale.ps1  analyse_locale.sh  apply_optimizations.py  (+122 more)
.github/: dependabot.yml
benchmarking/: README.md  blockchain_benchmark.py  dex_benchmark.py  requirements.txt  run_benchmarks.py  system_benchmark.py  transaction_benchmark.py
config/: claude_config.yaml  config.yaml  default_config.yaml  solana_config.json  solana_sniper_config.yaml  sonic_config.json  test_config.yaml  testnet_config.json  wallets.example.json  wallets.json
config_test/: .wallet_salt  wallets.encrypted.json  wallets_decrypted.json
docs/: AGENT_IA.md  AI_INTEGRATION.md  AI_INTEGRATION_GUIDE.md  AI_README.md  AI_TRADING_INTEGRATION.md  ANTI_DETECTION_GUIDE.md  AUTO_OPTIMIZATION.md  BACKTESTING.md  BACKTESTING_IMPLEMENTATION_PLAN.md  CEX_INTEGRATION.md  CLI_GUIDE.md  CODEQL_GUIDE.md  CONFIGURATION_GUIDE.md  CONTRACT_ANALYZER.md  DASHBOARD.md  ENVIRONMENT_MANAGEMENT.md  HARDWARE_OPTIMIZATION.md  INSTALLATION.md  INTELLIGENT_PROFILE_MANAGEMENT.md  LANCEMENT_GBPBOT.md  LIGHTWEIGHT_MODELS.md  MEV_OPTIMIZATION.md  MONITORING_GUIDE.md  PENTESTS_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STRUCTURE.md  README.md  README_IA.md  ROADMAP_PROGRESS.md  SECURITY_ANALYSIS_GUIDE.md  SECURITY_GUIDE.md  SOLANA_WEB3_ADAPTER.md  SONARQUBE_GUIDE.md  SONARQUBE_TRADING_RULES.md  SONIC_CLIENT.md  SONIC_GUIDE.md  SONIC_INTEGRATION.md  TELEGRAM_INTERFACE.md  TESTING.md  TROUBLESHOOTING.md  (+9 more)
env/: pyvenv.cfg
env_gbpbot/: pyvenv.cfg
env_new/: pyvenv.cfg
examples/: ai_token_analysis_demo.py  backtest_arbitrage_example.py  cex_trading_example.py  continuous_learning_example.py  ethereum_example.py  multi_chain_example.py  simple_learning_demo.py  solana_example.py  sonic_client_example.py
gbpbot/: .env.example  README.md  README_PRODUCTION.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  __init__.py  agent_example.py  api_server.py  boot.py  bot_runner.py  bundle_checker.py  cli.py  cli_interface.py  deploy_production.py  docstring_example.py  gas_optimizer.py  gbpbot_menu.py  gbpbot_menu.py.bak  gbpbot_menu_fixed.py  generate_ssl_cert.py  main.py  mempool_sniping.py  monitor_production.py  optimizer.py  production_test.py  requirements.txt  resource_monitor.py  run_benchmark.py  security_config.py  security_test.py  setup_documentation.py  simulation_data.json  simulation_data.py  start.py  start_servers.py  stress_test.py  telegram_bot.py  test_gbpbot.py  web_dashboard.py
logs/: system_check_results_20250307_204235.json  system_check_results_20250307_204239.json
memescan/: __init__.py  __main__.py
scripts/: analyze_logs.py  backup_config.ps1  check_python310.py  create_integration_tests.py  emergency_stop.py  emergency_transfer.py  install_dependencies_py310.py  pre_launch_check.py  run_complete_analysis.ps1  run_complete_analysis.sh  run_pentest.bat  run_pentest.py  run_pentest.sh  run_security_analysis.ps1  run_security_analysis.sh  setup_env.py  setup_run_environment.py  setup_sonarqube.ps1  setup_sonarqube.sh  setup_test_env.py  start_bot.py  start_dashboard.py  system_check.py  test_simulation_prices.py  update_config.py  update_env.py  update_simulation_prices.py  validate_config.py
stubs/: compatibility_stub.py
temp_test/: package-lock.json  package.json  test.js
test_reports/: report_20250302_173114.json  report_20250302_174200.json  report_20250302_174238.json  report_20250302_174650.json  report_20250302_180622.json  (+4 more)
(+399 files in other folders)
